--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,59 +1,67 @@
-@article{Pearson:2017,
-  	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
-  	Archiveprefix = {arXiv},
-  	Author = {{Pearson}, S. and {Price-Whelan}, A.~M. and {Johnston}, K.~V.},
-  	Eprint = {1703.04627},
-  	Journal = {ArXiv e-prints},
-  	Keywords = {Astrophysics - Astrophysics of Galaxies},
-  	Month = mar,
-  	Title = {{Gaps in Globular Cluster Streams: Pal 5 and the Galactic Bar}},
-  	Year = 2017
+@article{ham2020participatory,
+  title={Participatory sensing and digital twin city: Updating virtual city models for enhanced risk-informed decision-making},
+  author={Ham, Youngjib and Kim, Jaeyoon},
+  journal={Journal of Management in Engineering},
+  volume={36},
+  number={3},
+  pages={04020005},
+  year={2020},
+  publisher={American Society of Civil Engineers}
+}
+@article{ye2024developing,
+  title={Developing campus digital twin using interactive visual analytics approach},
+  author={Ye, Xinyue and Jamonnak, Suphanut and Van Zandt, Shannon and Newman, Galen and Suermann, Patrick},
+  journal={Frontiers of Urban and Rural Planning},
+  volume={2},
+  number={1},
+  pages={9},
+  year={2024},
+  publisher={Springer}
+}
+@article{gong2025integrating,
+  title={Integrating Spatiotemporal Vision Transformer into Digital Twins for High-Resolution Heat Stress Forecasting in Campus Environments},
+  author={Gong, Wenjing and Ye, Xinyue and Wu, Keshu and Jamonnak, Suphanut and Zhang, Wenyu and Yang, Yifan and Huang, Xiao},
+  journal={arXiv preprint arXiv:2502.09657},
+  year={2025}
+}
+@article{goodchild2007citizens,
+  title={Citizens as sensors: the world of volunteered geography},
+  author={Goodchild, Michael F},
+  journal={GeoJournal},
+  volume={69},
+  pages={211--221},
+  year={2007},
+  publisher={Springer}
 }
 
-@book{Binney:2008,
-  	url = {http://adsabs.harvard.edu/abs/2008gady.book.....B},
-  	Author = {{Binney}, J. and {Tremaine}, S.},
-  	Booktitle = {Galactic Dynamics: Second Edition, by James Binney and Scott Tremaine.~ISBN 978-0-691-13026-2 (HB).~Published by Princeton University Press, Princeton, NJ USA, 2008.},
-  	Publisher = {Princeton University Press},
-  	Title = {{Galactic Dynamics: Second Edition}},
-  	Year = 2008
+@article{errandonea2020digital,
+  title={Digital Twin for maintenance: A literature review},
+  author={Errandonea, Itxaro and Beltr{\'a}n, Sergio and Arrizabalaga, Saioa},
+  journal={Computers in industry},
+  volume={123},
+  pages={103316},
+  year={2020},
+  publisher={Elsevier}
 }
 
-@article{gaia,
-    author = {{Gaia Collaboration}},
-    title = "{The Gaia mission}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1609.04153},
-    primaryClass = "astro-ph.IM",
-    keywords = {space vehicles: instruments, Galaxy: structure, astrometry, parallaxes, proper motions, telescopes},
-    year = 2016,
-    month = nov,
-    volume = 595,
-    doi = {10.1051/0004-6361/201629272},
-    url = {http://adsabs.harvard.edu/abs/2016A%26A...595A...1G},
+@article{zhou5065948advancing,
+  title={Advancing Smart Disaster Response by Leveraging Social Sensing and Mobile Technology},
+  author={Zhou, Sulong and Wu, Meiliu and Ye, Xinyue and Silbernagel, Janet and Hart, David A and Huang, Qunying},
+  year={2024},
+  journal={Available at SSRN 5065948}
 }
 
-@article{astropy,
-    author = {{Astropy Collaboration}},
-    title = "{Astropy: A community Python package for astronomy}",
-    journal = {Astronomy and Astrophysics},
-    archivePrefix = "arXiv",
-    eprint = {1307.6212},
-    primaryClass = "astro-ph.IM",
-    keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
-    year = 2013,
-    month = oct,
-    volume = 558,
-    doi = {10.1051/0004-6361/201322068},
-    url = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A}
+@book{meinel2011design,
+  title={Design thinking: Understand-improve-apply},
+  author={Meinel, Christoph and Leifer, Larry and Plattner, Hasso},
+  year={2011},
+  publisher={Springer}
 }
 
-@misc{fidgit,
-  author = {A. M. Smith and K. Thaney and M. Hahnel},
-  title = {Fidgit: An ungodly union of GitHub and Figshare},
-  year = {2020},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  url = {https://github.com/arfon/fidgit}
+@inproceedings{corral2018design,
+  title={Design thinking and agile practices for software engineering: an opportunity for innovation},
+  author={Corral, Luis and Fronza, Ilenia},
+  booktitle={Proceedings of the 19th Annual SIG Conference on Information Technology Education},
+  pages={26--31},
+  year={2018}
 }
